force-app/main/default/objects/Account/fields/Custom_Field1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field1__c</fullName>
    <label>Custom Field1</label>
    <length>11</length>
    <type>Text</type>
</CustomField>