force-app/main/default/objects/Account/fields/Custom_Field2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field2__c</fullName>
    <label>Custom Field2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>