force-app/main/default/objects/Account/fields/TestVolume__c.field-meta.xml
<CustomField>
    <fullName>TestVolume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestVolume</label>
    <type>Checkbox</type>
</CustomField>